# holocron

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  agents.MD  docker-compose.yml  pyproject.toml
.github/workflows/: ci-prerelease.yaml  ci-prod.yaml  ci.yaml  ci.yml  codeql.yml  docker-publish.yaml  nightly.yaml  prepare-release.yaml  publish-release.yaml  pypi-publish.yaml
src/: config.py  g2g.py  github_provider.py  holocron.py  logger.py  mirror.py
src/holocron/: __main__.py  config.py  github_provider.py  mirror.py  utils.py
src/holocron/providers/: base.py  github.py  gitlab.py
tests/: test_config.py  test_g2g.py  test_github_provider.py  test_holocron.py  test_logger.py  test_mirror.py
