[project]
name = "g2g-sync"
version = "0.1.0"
description = "G2G-Sync: The GitHub to GitLab Mirroring Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = ["mirror-data", ".venv", ".git"]
testpaths = ["tests"]
